--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-rc.1",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
+    "react-router": "^6.0.1",
+    "react-router-dom": "^6.0.1",
     "react-scripts": "4.0.3",
     "reactstrap": "^8.10.0",
     "web-vitals": "^2.1.2"
@@ -22,7 +25,6 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
-
   "eslintConfig": {
     "extends": [
       "react-app",
